--- a/Main.HTML
+++ b/Main.HTML
@@ -1,143 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Nithilagam Homestays</title>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
-  <style>
-    body {
-      font-family: 'Montserrat', sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #f5f5f5;
-      color: #333;
-      line-height: 1.6;
-    }
-    .container {
-      max-width: 1200px;
-      margin: 0 auto;
-      padding: 20px;
-    }
-    header {
-      text-align: center;
-      padding: 50px 0;
-      background-color: #008080;
-      color: #fff;
-    }
-    header h1 {
-      font-size: 3em;
-      margin: 0;
-      font-weight: 600;
-    }
-    header p {
-      font-size: 1.2em;
-      margin-top: 20px;
-    }
-    section {
-      margin: 50px 0;
-    }
-    section h2 {
-      font-size: 2em;
-      font-weight: 600;
-      margin-bottom: 20px;
-    }
-    ul {
-      list-style-type: disc;
-      padding-left: 20px;
-    }
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-      gap: 20px;
-    }
-    img {
-      width: 100%;
-      height: auto;
-      border-radius: 10px;
-    }
-    .room img {
-      margin-top: 20px;
-    }
-    .text-center {
-      text-align: center;
-    }
-    .location p {
-      margin: 10px 0;
-      font-size: 1.1em;
-    }
-    .button {
-      display: inline-block;
-      background-color: #008080;
-      color: white;
-      padding: 10px 20px;
-      border-radius: 30px;
-      text-decoration: none;
-      font-weight: 600;
-      margin-top: 20px;
-    }
-    .button:hover {
-      background-color: #005f5f;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Nithilagam Homestays</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
+    <style>
+        /* ... (Existing CSS styles) ... */
+    </style>
 </head>
 <body>
-  <div class="container">
-    <header>
-      <h1>Nithilagam Homestays</h1>
-      <p>Experience the tranquility and comfort of Nithilagam Homestays, located in the beautiful region of India. Perfect for families, couples, and solo travelers, our homestay offers a serene escape from the hustle and bustle of city life.</p>
-    </header>
+    <nav>
+        <a href="#highlights">Highlights</a>
+        <a href="#rooms">Rooms</a>
+        <a href="#location">Location</a>
+        <a href="#contact">Contact</a>
+    </nav>
 
-    <section class="highlights">
-      <h2>Property Highlights</h2>
-      <ul>
-        <li><strong>Free WiFi:</strong> Stay connected with our high-speed internet.</li>
-        <li><strong>Family Rooms:</strong> Spacious accommodations perfect for families.</li>
-        <li><strong>Free Parking:</strong> Convenient parking for all guests.</li>
-        <li><strong>Non-Smoking Rooms:</strong> Enjoy a clean, smoke-free environment.</li>
-      </ul>
-      <div class="grid">
-        <img src="https://github.com/varunleaf/Nithilagam.github.io/blob/main/public/images/image_1.jpg" alt="Property 1">
-        <img src="https://github.com/varunleaf/Nithilagam.github.io/blob/main/public/images/image_2.jpg" alt="Property 2">
-        <img src="https://github.com/varunleaf/Nithilagam.github.io/blob/main/public/images/image_3.jpg" alt="Property 3">
-      </div>
-    </section>
-
-    <section class="rooms">
-      <h2>Room Types</h2>
-      <div class="room">
-        <h3>Deluxe Double Room with Balcony</h3>
-        <p><strong>Room Size:</strong> 20 m²</p>
-        <p><strong>Bed:</strong> 1 large double bed</p>
-        <p><strong>Amenities:</strong> Balcony, Air conditioning, Flat-screen TV, Private bathroom, Free toiletries, Towels</p>
-        <img src="https://github.com/varunleaf/Nithilagam.github.io/blob/main/public/images/image_4.jpg" alt="Deluxe Double Room">
-      </div>
-      <div class="room">
-        <h3>Family Room with Garden View</h3>
-        <p><strong>Room Size:</strong> 30 m²</p>
-        <p><strong>Bed:</strong> 2 large double beds</p>
-        <p><strong>Amenities:</strong> Garden view, Air conditioning, Flat-screen TV, Private bathroom, Free toiletries, Towels</p>
-        <img src="https://github.com/varunleaf/Nithilagam.github.io/blob/main/public/images/image_5.jpg" alt="Family Room">
-      </div>
-    </section>
-
-    <section class="location">
-      <h2>Location</h2>
-      <p><strong>Address:</strong> 173/48, Kosamadam Street, Mathalangulam, Tiruvannamalai, Tamil Nadu 606601</p>
-      <p><strong>Location:</strong> 63MC+QW Tiruvannamalai, Tamil Nadu</p>
-    </section>
-
-    <div class="text-center">
-      <a href="https://www.booking.com/hotel/in/nithilagam-homestays.en-gb.html?aid=357026&label=gog235jc-1DCAsobEIUbml0aGlsYWdhbS1ob21lc3RheXNIM1gDaGyIAQGYAQm4ARnIAQzYAQPoAQGIAgGoAgO4AoSlzbUGwAIB0gIkMWEwMzQ0ZTYtZGQ0Yi00NTk5LTg4YTQtNGFmNjhlMDExNzlh2AIE4AIB&sid=997238d86b717439c4dde2d575070886&dist=0&keep_landing=1&sb_price_type=total&type=total&"
-      class="button">Book Now</a>
+    <div class="hero">
+        <h1>Nithilagam Homestays</h1>
+        <p>Experience the tranquility and comfort of Nithilagam Homestays</p>
+        <a href="https://www.booking.com/hotel/in/nithilagam-homestays.en-gb.html?aid=357026&label=gog235jc-1DCAsobEIUbml0aGlsYWdhbS1ob21lc3RheXNIM1gDaGyIAQGYAQm4ARnIAQzYAQPoAQGIAgGoAgO4AoSlzbUGwAIB0gIkMWEwMzQ0ZTYtZGQ0Yi00NTk5LTg4YTQtNGFmNjhlMDExNzlh2AIE4AIB&sid=997238d86b717439c4dde2d575070886&dist=0&keep_landing=1&sb_price_type=total&type=total&" class="button">Book Now</a>
     </div>
 
-    <section class="contact">
-      <h2>Contact Us</h2>
-      <p>For any inquiries or further information, please contact us:</p>
-      <p><strong>Phone:</strong> [Insert Phone Number Here]</p>
-      <p><strong>Email:</strong> [Insert Email Address Here]</p>
-    </section>
-  </div>
+    <div class="container">
+        <section id="highlights" class="highlights">
+            <h2>Property Highlights</h2>
+            <div class="highlight-card">
+                <img src="https://github.com/varunleaf/Nithilagam.github.io/blob/main/public/images/icon-wifi.png" alt="Free WiFi">
+                <p>Free WiFi</p>
+            </div>
+            <div class="highlight-card">
+                <img src="https://github.com/varunleaf/Nithilagam.github.io/blob/main/public/images/icon-family.png" alt="Family Rooms">
+                <p>Family Rooms</p>
+            </div>
+            <div class="highlight-card">
+                <img src="https://github.com/varunleaf/Nithilagam.github.io/blob/main/public/images/icon-parking.png" alt="Free Parking">
+                <p>Free Parking</p>
+            </div>
+            <div class="highlight-card">
+                <img src="https://github.com/varunleaf/Nithilagam.github.io/blob/main/public/images/icon-non-smoking.png" alt="Non-Smoking Rooms">
+                <p>Non-Smoking Rooms</p>
+            </div>
+        </section>
+
+        <section id="rooms" class="rooms">
+            <h2>Room Types</h2>
+            <div class="room">
+                <h3>Deluxe Double Room with Balcony</h3>
+                <p><strong>Room Size:</strong> 20 m²</p>
+                <p><strong>Bed:</strong> 1 large double bed</p>
+                <p><strong>Amenities:</strong> Balcony, Air conditioning, Flat-screen TV, Private bathroom, Free toiletries, Towels</p>
+                <img src="https://github.com/varunleaf/Nithilagam.github.io/blob/main/public/images/image_4.jpg" alt="Deluxe Double Room">
+            </div>
+            <div class="room">
+                <h3>Family Room with Garden View</h3>
+                <p><strong>Room Size:</strong> 30 m²</p>
+                <p><strong>Bed:</strong> 2 large double beds</p>
+                <p><strong>Amenities:</strong> Garden view, Air conditioning, Flat-screen TV, Private bathroom, Free toiletries, Towels</p>
+                <img src="https://github.com/varunleaf/Nithilagam.github.io/blob/main/public/images/image_5.jpg" alt="Family Room">
+            </div>
+        </section>
+
+        <section id="location" class="location">
+            <h2>Location</h2>
+            <p><strong>Address:</strong> 173/48, Kosamadam Street, Mathalangulam, Tiruvannamalai, Tamil Nadu 606601</p>
+            <p><strong>Location:</strong> 63MC+QW Tiruvannamalai, Tamil Nadu</p>
+        </section>
+
+        <div class="text-center">
+            <a href="https://www.booking.com/hotel/in/nithilagam-homestays.en-gb.html?aid=357026&label=gog235jc-1DCAsobEIUbml0aGlsYWdhbS1ob21lc3RheXNIM1gDaGyIAQGYAQm4ARnIAQzYAQPoAQGIAgGoAgO4AoSlzbUGwAIB0gIkMWEwMzQ0ZTYtZGQ0Yi00NTk5LTg4YTQtNGFmNjhlMDExNzlh2AIE4AIB&sid=997238d86b717439c4dde2d575070886&dist=0&keep_landing=1&sb_price_type=total&type=total&" class="button">Book Now</a>
+        </div>
+
+        <footer>
+            <p>&copy; 2023 Nithilagam Homestays</p>
+            <div class="social-icons">
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+            </div>
+        </footer>
+
+    </div> 
+    <script src="https://kit.fontawesome.com/your-font-awesome-kit-code.js" crossorigin="anonymous"></script> 
 </body>
 </html>
