--- a/Main.HTML
+++ b/Main.HTML
@@ -4,84 +4,161 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nithilagam Homestays</title>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <style>
-        /* ... (Existing CSS styles) ... */
+        body {
+            font-family: 'Poppins', sans-serif;
+            margin: 0;
+            padding: 0;
+            color: #333;
+        }
+
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+
+        header {
+            text-align: center;
+            padding: 50px 0;
+            background-color: #f8f8f8;
+        }
+
+        h1 {
+            font-size: 3rem;
+            font-weight: 600;
+        }
+
+        p {
+            font-size: 1.2rem;
+            line-height: 1.6;
+        }
+
+        h2 {
+            font-size: 2rem;
+            font-weight: 600;
+            margin-bottom: 20px;
+        }
+
+        .highlights ul {
+            list-style: disc;
+            margin-left: 20px;
+        }
+
+        .grid {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 20px;
+            margin-top: 20px;
+        }
+
+        .grid img {
+            width: 100%;
+            height: auto;
+            border-radius: 10px;
+        }
+
+        .rooms .room {
+            margin-top: 30px;
+        }
+
+        .reviews blockquote {
+            border-left: 5px solid #007bff;
+            padding-left: 15px;
+            margin: 20px 0;
+            font-style: italic;
+        }
+
+        .contact {
+            margin-top: 50px;
+        }
+
+        .button {
+            display: inline-block;
+            background-color: #007bff;
+            color: white;
+            padding: 10px 20px;
+            text-decoration: none;
+            border-radius: 5px;
+            margin-top: 30px;
+        }
+
+        .text-center {
+            text-align: center;
+        }
     </style>
 </head>
 <body>
-    <nav>
-        <a href="#highlights">Highlights</a>
-        <a href="#rooms">Rooms</a>
-        <a href="#location">Location</a>
-        <a href="#contact">Contact</a>
-    </nav>
-
-    <div class="hero">
-        <h1>Nithilagam Homestays</h1>
-        <p>Experience the tranquility and comfort of Nithilagam Homestays</p>
-        <a href="https://www.booking.com/hotel/in/nithilagam-homestays.en-gb.html?aid=357026&label=gog235jc-1DCAsobEIUbml0aGlsYWdhbS1ob21lc3RheXNIM1gDaGyIAQGYAQm4ARnIAQzYAQPoAQGIAgGoAgO4AoSlzbUGwAIB0gIkMWEwMzQ0ZTYtZGQ0Yi00NTk5LTg4YTQtNGFmNjhlMDExNzlh2AIE4AIB&sid=997238d86b717439c4dde2d575070886&dist=0&keep_landing=1&sb_price_type=total&type=total&" class="button">Book Now</a>
-    </div>
-
     <div class="container">
-        <section id="highlights" class="highlights">
+        <header>
+            <h1>Nithilagam Homestays</h1>
+            <p>Experience the tranquility and comfort of Nithilagam Homestays, located in the beautiful region of India. Perfect for families, couples, and solo travelers, our homestay offers a serene escape from the hustle and bustle of city life.</p>
+        </header>
+
+        <section class="highlights">
             <h2>Property Highlights</h2>
-            <div class="highlight-card">
-                <img src="https://github.com/varunleaf/Nithilagam.github.io/blob/main/public/images/icon-wifi.png" alt="Free WiFi">
-                <p>Free WiFi</p>
-            </div>
-            <div class="highlight-card">
-                <img src="https://github.com/varunleaf/Nithilagam.github.io/blob/main/public/images/icon-family.png" alt="Family Rooms">
-                <p>Family Rooms</p>
-            </div>
-            <div class="highlight-card">
-                <img src="https://github.com/varunleaf/Nithilagam.github.io/blob/main/public/images/icon-parking.png" alt="Free Parking">
-                <p>Free Parking</p>
-            </div>
-            <div class="highlight-card">
-                <img src="https://github.com/varunleaf/Nithilagam.github.io/blob/main/public/images/icon-non-smoking.png" alt="Non-Smoking Rooms">
-                <p>Non-Smoking Rooms</p>
+            <ul>
+                <li><strong>Free WiFi:</strong> Stay connected with our high-speed internet.</li>
+                <li><strong>Family Rooms:</strong> Spacious accommodations perfect for families.</li>
+                <li><strong>Free Parking:</strong> Convenient parking for all guests.</li>
+                <li><strong>Non-Smoking Rooms:</strong> Enjoy a clean, smoke-free environment.</li>
+            </ul>
+            <div class="grid">
+                <img src="https://raw.githubusercontent.com/varunleaf/Nithilagam.github.io/main/public/images/image_1.jpg" alt="Property 1">
+                <img src="https://raw.githubusercontent.com/varunleaf/Nithilagam.github.io/main/public/images/image_2.jpg" alt="Property 2">
+                <img src="https://raw.githubusercontent.com/varunleaf/Nithilagam.github.io/main/public/images/image_3.jpg" alt="Property 3">
             </div>
         </section>
 
-        <section id="rooms" class="rooms">
+        <section class="rooms">
             <h2>Room Types</h2>
             <div class="room">
                 <h3>Deluxe Double Room with Balcony</h3>
                 <p><strong>Room Size:</strong> 20 m²</p>
                 <p><strong>Bed:</strong> 1 large double bed</p>
                 <p><strong>Amenities:</strong> Balcony, Air conditioning, Flat-screen TV, Private bathroom, Free toiletries, Towels</p>
-                <img src="https://github.com/varunleaf/Nithilagam.github.io/blob/main/public/images/image_4.jpg" alt="Deluxe Double Room">
+                <img src="https://raw.githubusercontent.com/varunleaf/Nithilagam.github.io/main/public/images/image_4.jpg" alt="Deluxe Double Room">
             </div>
             <div class="room">
                 <h3>Family Room with Garden View</h3>
                 <p><strong>Room Size:</strong> 30 m²</p>
                 <p><strong>Bed:</strong> 2 large double beds</p>
                 <p><strong>Amenities:</strong> Garden view, Air conditioning, Flat-screen TV, Private bathroom, Free toiletries, Towels</p>
-                <img src="https://github.com/varunleaf/Nithilagam.github.io/blob/main/public/images/image_5.jpg" alt="Family Room">
+                <img src="https://raw.githubusercontent.com/varunleaf/Nithilagam.github.io/main/public/images/image_5.jpg" alt="Family Room">
             </div>
         </section>
 
-        <section id="location" class="location">
+        <section class="reviews">
+            <h2>Guest Reviews</h2>
+            <p>Our guests love staying at Nithilagam Homestays. Here’s what they have to say:</p>
+            <blockquote>
+                <p><strong>John, United States:</strong> "Excellent stay! The rooms were clean and the staff was very friendly. Would definitely recommend."</p>
+            </blockquote>
+            <blockquote>
+                <p><strong>Priya, India:</strong> "A peaceful retreat with all the comforts of home. The garden view from our room was stunning."</p>
+            </blockquote>
+        </section>
+
+        <section class="location">
             <h2>Location</h2>
-            <p><strong>Address:</strong> 173/48, Kosamadam Street, Mathalangulam, Tiruvannamalai, Tamil Nadu 606601</p>
-            <p><strong>Location:</strong> 63MC+QW Tiruvannamalai, Tamil Nadu</p>
+            <p>Nithilagam Homestays is ideally situated, offering easy access to popular attractions and essential amenities.</p>
+            <p><strong>Address:</strong> [Insert Address Here]</p>
+            <p><strong>Nearby Attractions:</strong> [List Nearby Attractions Here]</p>
         </section>
 
         <div class="text-center">
-            <a href="https://www.booking.com/hotel/in/nithilagam-homestays.en-gb.html?aid=357026&label=gog235jc-1DCAsobEIUbml0aGlsYWdhbS1ob21lc3RheXNIM1gDaGyIAQGYAQm4ARnIAQzYAQPoAQGIAgGoAgO4AoSlzbUGwAIB0gIkMWEwMzQ0ZTYtZGQ0Yi00NTk5LTg4YTQtNGFmNjhlMDExNzlh2AIE4AIB&sid=997238d86b717439c4dde2d575070886&dist=0&keep_landing=1&sb_price_type=total&type=total&" class="button">Book Now</a>
+            <a class="button" href="https://www.booking.com/hotel/in/nithilagam-homestays.en-gb.html?aid=357026&label=gog235jc-1DCAsobEIUbml0aGlsYWdhbS1ob21lc3RheXNIM1gDaGyIAQGYAQm4ARnIAQzYAQPoAQGIAgGoAgO4AoSlzbUGwAIB0gIkMWEwMzQ0ZTYtZGQ0Yi00NTk5LTg4YTQtNGFmNjhlMDExNzlh2AIE4AIB&sid=997238d86b717439c4dde2d575070886&dist=0&keep_landing=1&sb_price_type=total&type=total&">
+                Book Now
+            </a>
         </div>
 
-        <footer>
-            <p>&copy; 2023 Nithilagam Homestays</p>
-            <div class="social-icons">
-                <a href="#"><i class="fab fa-facebook-f"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
-            </div>
-        </footer>
-
-    </div> 
-    <script src="https://kit.fontawesome.com/your-font-awesome-kit-code.js" crossorigin="anonymous"></script> 
+        <section class="contact">
+            <h2>Contact Us</h2>
+            <p>For any inquiries or further information, please contact us:</p>
+            <p><strong>Phone:</strong> [Insert Phone Number Here]</p>
+            <p><strong>Email:</strong> [Insert Email Address Here]</p>
+        </section>
+    </div>
 </body>
 </html>
