--- a/Main.HTML
+++ b/Main.HTML
@@ -4,12 +4,156 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nithilagam Homestays</title>
-    <link rel="icon" href="https://github.com/varunleaf/Nithilagam.github.io/blob/main/public/download.jpeg" type="image/jpeg"> 
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&display=swap" rel="stylesheet"> 
     <style>
-        /* ... (Your existing CSS styles) ... */
+        body {
+            font-family: 'Lora', serif; /* Use Lora for body text */
+            margin: 0;
+            padding: 0;
+            color: #333;
+            line-height: 1.6;
+        }
+
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+
+        header {
+            text-align: center;
+            padding: 0; /* Remove padding for the hero image */
+        }
+
+        h1 {
+            font-family: 'Playfair Display', serif; /* Use Playfair Display for headings */
+            font-size: 3rem;
+            font-weight: 700;
+            margin-bottom: 10px;
+        }
+
+        p {
+            font-size: 1.2rem;
+            line-height: 1.6;
+        }
+
+        h2 {
+            font-family: 'Playfair Display', serif;
+            font-size: 2rem;
+            font-weight: 700;
+            margin-bottom: 20px;
+        }
+
+        .highlights ul {
+            list-style: disc;
+            margin-left: 20px;
+        }
+
+        .grid {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 20px;
+            margin-top: 20px;
+        }
+
+        .grid img {
+            width: 100%;
+            height: auto;
+            border-radius: 10px;
+        }
+
+        .rooms .room {
+            margin-top: 30px;
+            display: flex; /* Arrange room image and details side-by-side */
+            align-items: flex-start;
+        }
+
+        .rooms .room img {
+            width: 40%; /* Adjust image width as needed */
+            margin-right: 20px;
+        }
+
+        .rooms .room .room-details {
+            width: 60%; /* Adjust details width as needed */
+        }
+
+        .reviews blockquote {
+            border-left: 5px solid #007bff;
+            padding-left: 15px;
+            margin: 20px 0;
+            font-style: italic;
+        }
+
+        .contact {
+            margin-top: 50px;
+        }
+
+        .button {
+            display: inline-block;
+            background-color: #333; /* Darker button color */
+            color: white;
+            padding: 10px 20px;
+            text-decoration: none;
+            border-radius: 5px;
+            margin-top: 20px;
+            font-weight: 600;
+            transition: background-color 0.3s; /* Add smooth transition */
+        }
+
+        .button:hover {
+            background-color: #555; /* Slightly lighter on hover */
+        }
+
+        .text-center {
+            text-align: center;
+        }
+
+        .hero { /* Style the hero section */
+            background-size: cover;
+            background-position: center;
+            color: white;
+            padding: 100px 0; /* Adjust padding as needed */
+            text-align: center;
+        }
+
+        .map-container {
+            position: relative;
+            width: 100%;
+            height: 0;
+            padding-bottom: 56.25%; /* 16:9 aspect ratio */
+            overflow: hidden;
+            margin-top: 20px;
+        }
+
+        .map-container iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+        }
+
+        /* Add styles for your contact form as needed */
+        .contact-form input[type="text"],
+        .contact-form input[type="email"],
+        .contact-form textarea {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+
+        .contact-form button[type="submit"] {
+            background-color: #007bff;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
@@ -58,18 +202,28 @@
                 <img src="https://raw.githubusercontent.com/varunleaf/Nithilagam.github.io/main/public/images/image_5.jpg" alt="Family Room">
                 <div class="room-details">
                     <h3>Family Room with Garden View</h3>
-                    <p>Create lasting memories with your loved ones in our spacious Family Room, offering breathtaking views of the surrounding gardens. Thoughtfully designed for comfort and relaxation, this haven provides ample space for everyone to unwind.</p>
-                    <ul>
-                        <li>Expansive 30 m² room</li>
-                        <li>Two plush queen-size beds</li>
-                        <li>Panoramic garden views</li>
-                        <li>Elegant en-suite bathroom</li>
-                        <li>Complimentary Wi-Fi</li>
-                    </ul>
-                    <a href="#" class="button">View Details</a>
-                </div>
+                <p>Create lasting memories with your loved ones in our spacious Family Room, offering breathtaking views of the surrounding gardens. Thoughtfully designed for comfort and relaxation, this haven provides ample space for everyone to unwind.</p>
+                <ul>
+                    <li>Expansive 30 m² room</li>
+                    <li>Two plush queen-size beds</li>
+                    <li>Panoramic garden views</li>
+                    <li>Elegant en-suite bathroom</li>
+                    <li>Complimentary Wi-Fi</li>
+                </ul>
+                <a href="#" class="button">View Details</a>
             </div>
-        </section>        
+        </section>
+
+        <section class="reviews">
+            <h2>Guest Reviews</h2>
+            <p>Our guests love staying at Nithilagam Homestays. Here’s what they have to say:</p>
+            <blockquote>
+                <p><strong>John, United States:</strong> "Excellent stay! The rooms were clean and the staff was very friendly. Would definitely recommend."</p>
+            </blockquote>
+            <blockquote>
+                <p><strong>Priya, India:</strong> "A peaceful retreat with all the comforts of home. The garden view from our room was stunning."</p>
+            </blockquote>
+        </section>
 
         <section class="location">
             <h2>Location</h2>
@@ -78,7 +232,7 @@
             <p><strong>Nearby Attractions:</strong> Arunachaleswara Temple, Ramana Ashram, Girivalam Path</p>
 
             <div class="map-container"> 
-                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15549.30337654843!2d79.695197!3d12.652859!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bad47e1d91d2147%3A0x732b7a45579aa6c4!2sNithilagam%20Homestays!5e0!3m2!1sen!2sin!4v1692336726240!5m2!1sen!2sin"
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3887.326636015959!2d79.69519691484367!3d12.652859090821943!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bad47e1d91d2147%3A0x732b7a45579aa6c4!2sTiruvannamalai%2C%20Tamil%20Nadu!5e0!3m2!1sen!2sin!4v1692258760986!5m2!1sen!2sin" 
                         width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </section>
